src/main/java/com/example/apptive19thhjfundbackend/_core/error/ex/Exception404.java
package com.example.apptive19thhjfundbackend._core.error.ex;

public class Exception404 extends RuntimeException{
    public Exception404(String msg) {
        super(msg);
    }
}